--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>профиль</title>
+    <title>Ваш профиль</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
-        .container { max-width: 400px; margin: auto; padding: 20px; border-radius: 10px; background: #f5f5f5; }
+        .container { max-width: 400px; margin: auto; padding: 20px; border-radius: 10px; background: #f5f5f5; display: none; }
         h2 { color: #333; }
         .profile-info { margin-top: 15px; text-align: left; }
+
+        /* Стили для анимации загрузки */
+        .loader-wrapper {
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .loader {
+            border: 6px solid #f3f3f3;
+            border-top: 6px solid #007bff;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
     </style>
     <script>
         function isTelegramWebApp() {
@@ -21,24 +43,37 @@
         }
 
         window.onload = function() {
-            if (!isTelegramWebApp()) {
-                redirectToTelegram();
-            } else {
-                const urlParams = new URLSearchParams(window.location.search);
-                const userId = urlParams.get('id');
-                if (userId) {
-                    document.getElementById("profile").innerHTML = `<p><strong>ID:</strong> ${userId}</p>`;
+            setTimeout(() => { // Имитация загрузки 1.5 секунды
+                document.querySelector(".loader-wrapper").style.display = "none";
+
+                if (!isTelegramWebApp()) {
+                    redirectToTelegram();
                 } else {
-                    document.getElementById("profile").innerHTML = "<p>Ошибка: ID не найден</p>";
+                    document.querySelector(".container").style.display = "block";
+                    const urlParams = new URLSearchParams(window.location.search);
+                    const userId = urlParams.get('id');
+                    if (userId) {
+                        document.getElementById("profile").innerHTML = `<p><strong>ID:</strong> ${userId}</p>`;
+                    } else {
+                        document.getElementById("profile").innerHTML = "<p>Ошибка: ID не найден</p>";
+                    }
                 }
-            }
+            }, 1500);
         };
     </script>
 </head>
 <body>
+
+    <!-- Анимация загрузки -->
+    <div class="loader-wrapper">
+        <div class="loader"></div>
+    </div>
+
+    <!-- Контейнер с профилем (изначально скрыт) -->
     <div class="container">
         <h2>Ваш профиль</h2>
         <div class="profile-info" id="profile"></div>
     </div>
+
 </body>
 </html>
