--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,14 @@
         }
     </style>
     <script>
+
+        fetch("/auth", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ initData: tg.initData })
+        })
+        .then(response => response.json())
+        .then(data => console.log("Ответ сервера:", data));
         
         window.Telegram.WebApp.expand(); // Разворачиваем Web App на весь экран
 
