--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,12 @@
         }
     </style>
     <script>
-       window.Telegram.WebApp.expand(); // Разворачиваем Web App
+       window.Telegram.WebApp.expand(); // Разворачиваем Web App на весь экран
 
+        // Получаем данные пользователя
         let tg = window.Telegram.WebApp;
         let user = tg.initDataUnsafe?.user;
-
+    
         if (user) {
             document.getElementById("profile").innerHTML = `
                 <h2>Ваш профиль</h2>
@@ -45,9 +46,8 @@
                 <p><b>Ник:</b> ${user.first_name} ${user.last_name || ""}</p>
                 ${user.username ? `<p><b>Юзер:</b> @${user.username}</p>` : ""}
             `;
-
         } else {
-            document.getElementById("profile").innerHTML = "<p>Ошибка: не удалось получить данные.</p>";
+            document.getElementById("profile").innerHTML = `<p>Ошибка: не удалось получить данные.</p>`;
         }
         
         function isTelegramWebApp() {
