--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
 
     <!-- Анимация загрузки -->
     <div class="loader-wrapper">
-        <div class="loader" id="loading"></div>
+        <div class="loader"></div>
     </div>
 
     <!-- Контейнер с профилем (изначально скрыт) -->
