--- a/public/index.html
+++ b/public/index.html
@@ -3,93 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ваш профиль</title>
+    <title>Telegram WebApp</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script defer src="main.js"></script>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
-        .container { max-width: 400px; margin: auto; padding: 20px; border-radius: 10px; background: #f5f5f5; display: none; }
-        h2 { color: #333; }
-        .profile-info { margin-top: 15px; text-align: left; }
-
-        /* Стили для анимации загрузки */
-        .loader-wrapper {
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        #loading {
             position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
+            width: 100%;
+            height: 100%;
             background: white;
             display: flex;
             justify-content: center;
             align-items: center;
+            font-size: 20px;
         }
-        .loader {
-            border: 6px solid #f3f3f3;
-            border-top: 6px solid #007bff;
-            border-radius: 50%;
-            width: 50px;
-            height: 50px;
-            animation: spin 1s linear infinite;
-        }
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+        #content {
+            display: none;
         }
     </style>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            // Проверяем, доступен ли объект Telegram WebApp
-            if (window.Telegram && window.Telegram.WebApp) {
-                window.Telegram.WebApp.expand(); // Разворачиваем WebApp
-
-                // Получаем данные пользователя
-                let tg = window.Telegram.WebApp;
-                let user = tg.initDataUnsafe?.user;
-
-                if (user) {
-                    document.getElementById("profile").innerHTML = `
-                        <h2>Ваш профиль</h2>
-                        <p><b>ID:</b> ${user.id}</p>
-                        <p><b>Ник:</b> ${user.first_name} ${user.last_name || ""}</p>
-                        ${user.username ? `<p><b>Юзер:</b> @${user.username}</p>` : ""}
-                    `;
-                } else {
-                    document.getElementById("profile").innerHTML = `<p>Ошибка: не удалось получить данные.</p>`;
-                }
-            } else {
-                document.getElementById("profile").innerHTML = `<p>Ошибка: WebApp не доступен.</p>`;
-            }
-        });
-
-        function isTelegramWebApp() {
-            return window.Telegram !== undefined;
-        }
-
-        function redirectToTelegram() {
-            const botUsername = "Petition_jp_Bot"; // Замените на username вашего бота
-            window.location.href = `https://t.me/${botUsername}?start=openonlytelegram`;
-        }
-
-        window.onload = function() {
-            setTimeout(() => { // Имитация загрузки 1.5 секунды
-                document.querySelector(".loader-wrapper").style.display = "none";
-
-                if (!isTelegramWebApp()) {
-                    redirectToTelegram();  // Перенаправление на Telegram
-                } else {
-                    document.querySelector(".container").style.display = "block";
-                }
-            }, 1500);
-        };
-    </script>
 </head>
 <body>
 
-    <!-- Анимация загрузки -->
-    <div class="loader-wrapper">
-        <div class="loader"></div>
-    </div>
+    <div id="loading">Загрузка...</div>
 
-    <!-- Контейнер с профилем (изначально скрыт) -->
-    <div class="container">
-        <h2>Ваш профиль</h2>
-        <div class="profile-info" id="profile"></div>
+    <div id="content">
+        <h1>Telegram WebApp</h1>
+        <p id="user-data">Загрузка...</p>
     </div>
 
 </body>
