--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,10 @@
 <body>
 
     <div id="loading">Загрузка...</div>
+    <div id="log" style="white-space: pre-wrap; font-family: monospace;"></div>
+    <script defer src="/main.js"></script>
 
-    <div id="content">
-        <h1>Telegram WebApp</h1>
-        <p id="user-data">Загрузка...</p>
-    </div>
+
 
 </body>
 </html>
