--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,16 @@
     </style>
 </head>
 <body>
-
     <div id="loading">Загрузка...</div>
     <div id="log" style="white-space: pre-wrap; font-family: monospace;"></div>
+    
+    <!-- Основной контент, который будет показываться после загрузки WebApp -->
+    <div id="content" style="display: none;">
+        <h1>Добро пожаловать в WebApp!</h1>
+        <!-- Тут будет твой основной контент WebApp -->
+    </div>
+
     <script defer src="/main.js"></script>
-
-
-
 </body>
+
 </html>
