--- a/public/index.html
+++ b/public/index.html
@@ -32,13 +32,14 @@
     <div id="loading">Загрузка...</div>
     <div id="log" style="white-space: pre-wrap; font-family: monospace;"></div>
     
-    <!-- Основной контент, который будет показываться после загрузки WebApp -->
+    <!-- Основной контент, который будет показываться после загрузки данных -->
     <div id="content" style="display: none;">
         <h1>Добро пожаловать в WebApp!</h1>
-        <!-- Тут будет твой основной контент WebApp -->
+        <div id="userData"></div>
     </div>
 
     <script defer src="/main.js"></script>
 </body>
+
 
 </html>
