--- a/public/index.html
+++ b/public/index.html
@@ -31,15 +31,18 @@
 <body>
     <div id="loading">Загрузка...</div>
     <div id="log" style="white-space: pre-wrap; font-family: monospace;"></div>
-    
-    <!-- Основной контент, который будет показываться после загрузки данных -->
+
+    <!-- Основной контент -->
     <div id="content" style="display: none;">
         <h1>Добро пожаловать в WebApp!</h1>
-        <div id="userData"></div>
+        <div id="userData">
+            <p>Загрузка данных профиля...</p>
+        </div>
     </div>
 
     <script defer src="/main.js"></script>
 </body>
+
 
 
 </html>
