--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,9 @@
     </style>
 </head>
 <body>
+    <div id="loading">Загрузка...</div>
+    <div id="log" style="white-space: pre-wrap; font-family: monospace;"></div>
+
     <!-- Основной контент -->
     <div id="content" style="display: none;">
         <h1>Добро пожаловать в WebApp!</h1>
@@ -39,6 +42,7 @@
 
     <script defer src="/main.js"></script>
 </body>
+
 
 
 
