--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-    <div id="loading">Загрузка...</div>
+    <div id="loading" style="text-align: center; font-size: 20px; padding: 50px;">Загрузка...</div>
     <div id="log" style="white-space: pre-wrap; font-family: monospace;"></div>
 
     <!-- Основной контент -->
@@ -42,6 +42,7 @@
 
     <script defer src="/main.js"></script>
 </body>
+
 
 
 
