--- a/public/index.html
+++ b/public/index.html
@@ -4,47 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telegram WebApp</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script defer src="main.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        #loading {
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            background: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 20px;
-        }
-        #content {
-            display: none;
-        }
-    </style>
 </head>
 <body>
-    <div id="loading" style="text-align: center; font-size: 20px; padding: 50px;">Загрузка...</div>
-    <div id="log" style="white-space: pre-wrap; font-family: monospace;"></div>
-
-    <!-- Основной контент -->
-    <div id="content" style="display: none;">
-        <h1>Добро пожаловать в WebApp!</h1>
-        <div id="userData">
-            <p>Загрузка данных профиля...</p>
-        </div>
-    </div>
-
-    <script defer src="/main.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="/main.js"></script>
 </body>
-
-
-
-
-
 </html>
