--- a/public/index.html
+++ b/public/index.html
@@ -55,9 +55,18 @@
         <button onclick="showContent('profile')" id="btn-profile">Профиль</button>
     </div>
 
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="/main.js"></script>
     <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const tg = window.Telegram?.WebApp;
+
+            if (!tg) {
+                console.error("Ошибка: Telegram SDK не загружен!");
+                return;
+            }
+            
+            tg.expand();
+        });
+
         function showContent(page) {
             const content = document.getElementById('content');
             const buttons = document.querySelectorAll('.bottom-nav button');
@@ -74,11 +83,16 @@
                     html = '<h1>Товары</h1><p>Здесь отображаются товары.</p>';
                     break;
                 case 'profile':
-                    const user = window.Telegram.WebApp.initDataUnsafe.user;
-                    html = `<h1>Профиль</h1>
-                            <p><strong>Имя:</strong> ${user.first_name} ${user.last_name || ''}</p>
-                            <p><strong>Username:</strong> ${user.username || 'Нет'}</p>
-                            <p><strong>ID:</strong> ${user.id}</p>`;
+                    const tg = window.Telegram?.WebApp;
+                    const user = tg?.initDataUnsafe?.user;
+                    if (user) {
+                        html = `<h1>Профиль</h1>
+                                <p><strong>Имя:</strong> ${user.first_name} ${user.last_name || ''}</p>
+                                <p><strong>Username:</strong> @${user.username || 'Нет'}</p>
+                                <p><strong>ID:</strong> ${user.id}</p>`;
+                    } else {
+                        html = '<h1>Профиль</h1><p>Ошибка: данные пользователя не получены.</p>';
+                    }
                     break;
             }
             content.innerHTML = html;
