--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
         <button onclick="showContent('profile')" id="btn-profile">Профиль</button>
     </div>
 
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const tg = window.Telegram?.WebApp;
