--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
 
             async function loadConfig() {
                 try {
-                    const response = await fetch('/api/config'); // Запрос к серверу
+                    const response = await fetch('/api/config'); // Vercel теперь поддерживает этот путь
                     if (!response.ok) throw new Error("Ошибка загрузки конфигурации");
                     config = await response.json();
                     checkAccess();
