--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
             font-family: Arial, sans-serif;
             background-color: #0e1824;
             color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
         }
 
         .container {
@@ -52,19 +57,50 @@
             color: #4caf50;
             font-weight: bold;
         }
+
+        /* Стиль для сообщения */
+        .message-container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: #1c2938;
+            border-radius: 10px;
+            padding: 30px;
+        }
+
+        .message-container h1 {
+            margin-bottom: 20px;
+            font-size: 24px;
+        }
+
+        .message-container p {
+            margin-bottom: 30px;
+            font-size: 18px;
+        }
+
+        .telegram-button {
+            background-color: #0088cc;
+            color: white;
+            border: none;
+            padding: 12px 30px;
+            border-radius: 6px;
+            font-size: 16px;
+            cursor: pointer;
+            text-decoration: none;
+        }
+
+        .telegram-button:hover {
+            background-color: #006c99;
+        }
     </style>
 </head>
 <body>
 
-    <div class="container" id="content">
-        <h1>Товары</h1>
-        <div id="product-list">Загрузка товаров...</div>
-    </div>
-
-    <div class="bottom-nav">
-        <button onclick="showContent('news')" id="btn-news">Новости</button>
-        <button onclick="showContent('products')" id="btn-products" class="active">Товары</button>
-        <button onclick="showContent('profile')" id="btn-profile">Профиль</button>
+    <div class="message-container">
+        <h1>Ошибка!</h1>
+        <p>Сайт доступен только с Telegram</p>
+        <a href="https://t.me/JuniPit" class="telegram-button" target="_blank">Перейти в Telegram</a>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -74,7 +110,7 @@
         document.addEventListener("DOMContentLoaded", () => {
             // Проверяем userAgent на наличие Telegram
             if (!isTelegramWebApp()) {
-                document.body.innerHTML = "<h1>Открывайте сайт только через Telegram</h1>";
+                document.body.innerHTML = document.body.innerHTML; // Показываем ошибку
                 return;
             }
 
