--- a/public/index.html
+++ b/public/index.html
@@ -100,26 +100,23 @@
         .telegram-button:before {
             content: '';
             position: absolute;
-            top: -100%;
+            top: 0;
             left: -100%;
             width: 200%;
-            height: 200%;
+            height: 100%;
             background-image: linear-gradient(270deg, rgba(100, 181, 239, 0) 48.44%, #64b5ef 75.52%, rgba(100, 181, 239, 0) 100%);
             background-repeat: no-repeat;
-            animation: bg-move linear 5s infinite;
+            animation: bg-move 5s linear infinite;
         }
 
         @keyframes bg-move {
             0% {
-                top: -100%;
                 left: -100%;
             }
             50% {
-                top: 100%;
                 left: 100%;
             }
             100% {
-                top: -100%;
                 left: -100%;
             }
         }
