--- a/public/index.html
+++ b/public/index.html
@@ -108,13 +108,13 @@
             background-repeat: no-repeat;
         }
 
+       @-webkit-keyframes bg-move {
+          0%   { background-position: -500px 0; }
+          100% { background-position: 1000px 0; }
+        }
         @keyframes bg-move {
-            0% {
-                left: -100%;
-            }
-            100% {
-                left: 100%;
-            }
+          0%   { background-position: -500px 0; }
+          100% { background-position: 1000px 0; }
         }
     </style>
 </head>
