--- a/public/index.html
+++ b/public/index.html
@@ -106,6 +106,7 @@
             height: 100%;
             background-image: linear-gradient(270deg, rgba(100, 181, 239, 0) 48.44%, #64b5ef 75.52%, rgba(100, 181, 239, 0) 100%);
             background-repeat: no-repeat;
+            animation: bg-move linear 5s infinite;
         }
 
        @-webkit-keyframes bg-move {
