--- a/public/index.html
+++ b/public/index.html
@@ -117,6 +117,22 @@
           0%   { background-position: -500px 0; }
           100% { background-position: 1000px 0; }
         }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(0.8);
+                opacity: 0.6;
+            }
+            50% {
+                transform: scale(1.2);
+                opacity: 0.2;
+            }
+            100% {
+                transform: scale(0.8);
+                opacity: 0.6;
+            }
+        }
+
     </style>
 </head>
 <body>
