--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,9 @@
             background-color: #1c2938;
             border-radius: 10px;
             padding: 30px;
+            margin: 0;
+            height: 100%;
+            overflow: hidden;
         }
 
         .message-container h1 {
