--- a/public/index.html
+++ b/public/index.html
@@ -130,6 +130,12 @@
 </head>
 <body>
 
+    <div id="open-webapp-container" style="display: none;">
+        <h1>Откройте сайт в Telegram WebApp</h1>
+        <button onclick="openWebApp()">Открыть</button>
+    </div>
+
+
     <div class="message-container">
         <h1>Ошибка!</h1>
         <p>Сайт доступен только с Telegram</p>
@@ -156,15 +162,29 @@
 
         // Функция для проверки нахождения в Telegram WebApp
         function isTelegramWebApp() {
-            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
-            return /Telegram/i.test(userAgent);
+            return typeof window.Telegram !== "undefined" && typeof window.Telegram.WebApp !== "undefined";
         }
+
 
         function initializeApp() {
             const tg = window.Telegram?.WebApp;
             if (tg) tg.expand();
             fetchProducts();
         }
+
+        function openWebApp() {
+            window.location.href = "https://t.me/JuniPit"; // Замени на свою ссылку на бота
+        }
+        
+        document.addEventListener("DOMContentLoaded", () => {
+            if (!isTelegramWebApp()) {
+                document.getElementById("open-webapp-container").style.display = "block";
+            } else {
+                document.querySelector('.message-container').style.display = 'none';
+                initializeApp();
+            }
+        });
+
 
         function startAnimation() {
             const button = document.querySelector('.telegram-button');
