--- a/public/index.html
+++ b/public/index.html
@@ -130,14 +130,14 @@
 </head>
 <body>
 
-    <div class="message-container">
+<!--     <div class="message-container">
         <h1>Ошибка!</h1>
         <p>Сайт доступен только с Telegram</p>
         <a href="https://t.me/JuniPit" class="telegram-button" target="_blank">
             <span>Перейти в Telegram</span>
         </a>
 
-    </div>
+    </div> -->
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
