--- a/public/index.html
+++ b/public/index.html
@@ -118,6 +118,8 @@
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
+        let productsLoaded = false; // Флаг, чтобы избежать повторной загрузки товаров
+
         document.addEventListener("DOMContentLoaded", () => {
             const tg = window.Telegram?.WebApp;
 
@@ -144,7 +146,9 @@
                     break;
                 case 'products':
                     html = '<h1>Товары</h1><div id="product-list">Загрузка товаров...</div>';
-                    // Загрузка товаров только при полной перезагрузке
+                    if (!productsLoaded) { // Загружаем товары только если они еще не загружены
+                        fetchProducts();
+                    }
                     break;
                 case 'profile':
                     const tg = window.Telegram?.WebApp;
@@ -163,6 +167,8 @@
         }
 
         function fetchProducts() {
+            if (productsLoaded) return; // Если товары уже загружены, ничего не делаем
+
             fetch('/items.json')
                 .then(response => response.json())
                 .then(products => {
@@ -182,6 +188,7 @@
                         productElement.onclick = () => showProductDetails(product);
                         productList.appendChild(productElement);
                     });
+                    productsLoaded = true; // Устанавливаем флаг, что товары загружены
                 })
                 .catch(error => {
                     console.error('Ошибка загрузки товаров:', error);
